<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/concierto2"
    tools:context="edu.upc.eetac.dsa.dsaqt1314g4.netsound.MainActivity"
    tools:ignore="MergeRootFrame">


<EditText android:id="@+id/username" 
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:hint="@string/username"
 	/>
    
    <EditText android:id="@+id/password"
 		android:inputType="textPassword"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:hint="@string/password"
 	/>


<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="login"
    android:text="@string/button_submit" />

<Button
    android:id="@+id/signup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="signup"
    android:text="@string/button_signup" />

</LinearLayout>

